packages/shulker-operator/src/reconcilers/minecraft_server_fleet/snapshots/shulker_operator__reconcilers__minecraft_server_fleet__fleet_autoscaler__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server_fleet/fleet_autoscaler.rs
expression: fleet_autoscaler
---
apiVersion: autoscaling.agones.dev/v1
kind: FleetAutoscaler
metadata:
  labels:
    app.kubernetes.io/component: minecraft-server
    app.kubernetes.io/instance: fleet-autoscaler-my-server
    app.kubernetes.io/managed-by: shulker-operator
    app.kubernetes.io/name: fleet-autoscaler
    app.kubernetes.io/part-of: cluster-my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
    minecraftserverfleet.shulkermc.io/name: my-server
  name: my-server
  namespace: default
spec:
  fleetName: my-server
  policy:
    type: Buffer
    buffer:
      maxReplicas: 8
      minReplicas: 3
      bufferSize: 2

